--- a/Partials/Header.cshtml
+++ b/Partials/Header.cshtml
@@ -20,7 +20,7 @@
       <!-- Menu -->
       <nav class="flex space-x-6">
         <a href="/lookup" class="text-gray-600 p-2 text-lg font-semibold hover:text-black">Về chúng tôi</a>
-        <a href="#" class="text-gray-600 p-2 text-lg font-semibold hover:text-black">Trở thành đối tác</a>
+        <a href="/partners" class="text-gray-600 p-2 text-lg font-semibold hover:text-black">Trở thành đối tác</a>
         <a href="/register" class="text-gray-600 p-2 text-lg font-semibold hover:text-black">Đăng ký</a>
         <a href="/login"
           class="text-gray-600 border text-lg p-2 font-semibold rounded border-black  hover:text-black ">Đăng nhập</a>
